Folded in all old new code from old repository into github code, but ONLY from the site/ directory.

--- a/site/app/views/datasets/index.html.erb
+++ b/site/app/views/datasets/index.html.erb
@@ -7,8 +7,7 @@
   </div>
 <% end %>
 
-<p>A <a href="/help/index.html#datasets">dataset</a> is the input into a machine
-learning program.</p>
+<p>A dataset is the input into a machine learning program.</p>
 
 <%
 if sessionDatasetFormats[0] != '(all)' then
