--- a/site/app/views/general_display/index.html.erb
+++ b/site/app/views/general_display/index.html.erb
@@ -1,5 +1,7 @@
 <div id="home_info">
-  MLcomp is a free website for <b>objectively comparing</b> machine learning programs across various datasets for multiple problem <a href="/faq/domains">domains</a>.
+  MLcomp is a free website for <b>objectively comparing</b> machine learning
+  programs across various datasets for multiple problem <a
+    href="/faq/domains">domains</a>.
 
   <table cellspacing="20">
     <tr>
@@ -19,9 +21,14 @@
     <tr>
       <td><%= helpIcon %></td>
       <td>
-        <div class="homePoint">How do I learn more?</div>
+        <div class="homePoint">How do I learn more? Quick Links:</div>
         <div class="homeSubpoint">
-          Read the <a href="/faq">help page</a> or follow the <a href="/help/quickstart.html">QuickStart</a>.
+  <a href="http://groups.google.com/group/mlcomp">Discussion Forum</a> |
+  <a href="/faq">FAQ</a> |
+  <a href="/help/quickstart.html">QuickStart</a> |
+  <a href="/faq/domains">Domains</a> | 
+  <a href="/help/program_info.html">Programs</a> |
+  <a href="/faq/reductions">Reductions</a>
         </div>
       </td>
     </tr>
@@ -29,10 +36,8 @@
 
   <%= link_to 'Sign up', :controller => 'users', :action => 'new' %> for a free account!<p>
   
-  <span class=newHighlight>NEW</span>: A preliminary rating system for programs and datasets, support for datasets up to 200MB (zipped), and automatic creation of runs on your programs/datasets (read more on the <a href="http://groups.google.com/group/mlcomp">discussion forum</a>).<br>
-  <span class=newHighlight>NEW</span>: We just created a <a href="http://groups.google.com/group/mlcomp">discussion forum</a>.<br>
-  <span class=newHighlight>NEW</span>: We are actively improving MLcomp.  Please help us prioritize by
-  <a href="http://spreadsheets0.google.com/viewform?authkey=CN_n4ZkN&formkey=dG9nSGMwRGV4NHNIWWpWbzRGWjNNZ2c6MQ#gid=0" target="_blank">selecting the features most important to you</a>.
+  <a href="http://spreadsheets0.google.com/viewform?authkey=CN_n4ZkN&formkey=dG9nSGMwRGV4NHNIWWpWbzRGWjNNZ2c6MQ#gid=0" target="_blank">Vote</a>
+  on new features you'd like in MLcomp.
 </div>
 
 <br>
