Finally added EC2Manager (hacky); updated worker info to reflect upgrade to Ubuntu 11.04

--- a/site/app/views/static/help/worker_info.html
+++ b/site/app/views/static/help/worker_info.html
@@ -2,29 +2,30 @@
 
 All programs are run in the cloud on a standard Linux distribution,
 specifically, a 32-bit <a href="http://aws.amazon.com/ec2">Amazon EC2 machine</a>
-running Fedora Release 8 Linux (kernel 2.6.21).
+running Linux (Ubuntu 11.04, kernel 2.6.38).
 The table below shows the following packages installed by default.
 Let us know if you would like us to install additional packages.
 <p>
 <table>
-  <tr><th>Program</th><th>Version           </th></tr>
-  <tr><td>C/C++     </td><td>gcc/g++ 4.1.2 </td></tr>
-  <tr><td>Java      </td><td>Sun JDK 1.6.0_16 </td></tr>
-  <tr><td>Scala     </td><td>2.7.6          </td></tr>
-  <tr><td>Perl      </td><td>5.8.8          </td></tr>
-  <tr><td>Python    </td><td>2.5.1          </td></tr>
-  <tr><td>Ruby      </td><td>1.8.6          </td></tr>
-  <tr><td>R         </td><td>2.8.0          </td></tr>
-  <tr><td>Octave    </td><td>3.0.3          </td></tr>
-  <tr><td>clisp     </td><td>2.43-3         </td></tr>
-  <tr><td>guile     </td><td>1.8.5-1        </td></tr>
-  <tr><td>Ocaml     </td><td>3.10.0-8       </td></tr>
+  <tr><th>Program         </th><th>Version    </th><th>Additional Packages</th></tr>
+  <tr><td>C/C++ (gcc/g++) </td><td>4.5.2      </td></tr>
+  <tr><td>Java (Sun)      </td><td>1.7.0      </td></tr>
+  <tr><td>Scala           </td><td>2.9.0      </td></tr>
+  <tr><td>C# (mono)       </td><td>2.6.7      </td></tr>
+  <tr><td>Perl            </td><td>5.10.1     </td></tr>
+  <tr><td>Python          </td><td>2.7.1      </td><td>numpy, scipy</td></tr>
+  <tr><td>Ruby            </td><td>1.8.7      </td></tr>
+  <tr><td>R               </td><td>2.12.1     </td></tr>
+  <tr><td>Octave          </td><td>3.2.4      </td></tr>
+  <tr><td>Lisp (clisp)    </td><td>2.48       </td></tr>
+  <tr><td>Scheme (guile)  </td><td>1.8.7      </td></tr>
+  <tr><td>OCaml           </td><td>3.11.2     </td></tr>
+  <tr><td>Haskell (ghc)   </td><td>6.12.3     </td></tr>
 </table>
 
 <p>
-numpy and scipy are pre-installed for Python.  If your program requires
-libraries that we do not have installed, consider using the <a
-  href="http://www.stanford.edu/~pgbovine/cde.html">CDE tool</a>.
+If your program requires libraries that we do not have installed, consider using the <a
+href="http://www.stanford.edu/~pgbovine/cde.html">CDE tool</a>.
 See <a href="http://mlcomp.org/programs/894">the demo program</a> for more information.
 
 <p>
