Added more information to email event notifications, cleaned up email configuration stuff, updated about us page

--- a/site/app/views/emailer/user_comment.html.erb
+++ b/site/app/views/emailer/user_comment.html.erb
@@ -1,3 +1,3 @@
-The user <%= @username + " (#{@fullname})"%> visited URL <%= @url %> and at <%= @sent_at.to_s %> left the following comment:
+User <%= @username + " (#{@fullname}, email #{@email})"%> visited URL <%= @url %> and left the following comment:
 
 <%= @message %>
