--- a/site/app/views/static/help/about_us.html
+++ b/site/app/views/static/help/about_us.html
@@ -1,8 +1,8 @@
 <div id="creator_list_box">
-	<h1>The MLcomp Creators</h1>
+	<h1>MLcomp Team</h1>
 	<div id="creator_list">
 		
-		<div class="left_side">
+		<div class="right_side">
 			<div class="creator_description">
 			<img src="/images/jake.png"></img>
         <strong><a href="http://www.eecs.berkeley.edu/~jake">Jacob
@@ -13,12 +13,13 @@
 			</div>
 		</div>
 		
-		<div class="right_side">
+		<div class="left_side">
 			<img src="/images/percy.jpeg"></img>
 			<div class="creator_description">
-        <strong><a href="http://www.eecs.berkeley.edu/~pliang">Percy Liang</a></strong> is a 5th year Ph.D. student at UC Berkeley,
-        advised by Michael Jordan and Dan Klein.
-        Percy developed the infrastructure for executing runs, processing
+        <strong><a href="http://cs.stanford.edu/~pliang">Percy Liang</a></strong>
+        is a post-doc at Google and
+        will be an assistant professor at Stanford starting in Fall 2012.
+        He developed the infrastructure for executing runs, processing
         programs/datasets, and reporting results.
 			</div>
 		</div>
@@ -26,14 +27,11 @@
 		<div style="clear:both"></div>
 
 		<div>
-      <strong>Special thanks</strong> to <a
-        href="http://www.eecs.berkeley.edu/~asimma/">Alex Simma</a>, who
-      contributed significantly to both the design and early development of
-      MLcomp, as well as to <a
-        href="http://radlab.cs.berkeley.edu/node/68">Ariel Kleiner</a>, who
-      played a large role in the conceptualization of the site. We would also
-      to thank <a href="http://www.eecs.berkeley.edu/~jordan/">Michael
-        Jordan</a> for providing MLcomp with computational resources. <br><br>
+      <strong>Special thanks</strong> to
+      Alex Simma, who contributed significantly to both the design and early development of MLcomp,
+      and to Ariel Kleiner, who played a large role in the conceptualization of the site.
+      We would also to thank <a href="http://www.eecs.berkeley.edu/~jordan/">Michael
+        Jordan</a> and Intel for providing computational resources.<br><br>
 		</div>
 		
 		<div>
