Don't duplicate datasets even for dataset processing runs

--- a/site/app/views/layouts/base_layout_new.html.erb
+++ b/site/app/views/layouts/base_layout_new.html.erb
@@ -33,7 +33,7 @@
 			      <%= Dataset.count %> datasets,
 			      <%= Program.count %> programs,
 			      <%= Run.count %> runs (<%= Run.countByStatus('ready') %> queued, <%= Run.countByStatus('running') %> running),
-			      <%= Worker.countActive %> workers
+			      <%= Worker.count %> workers
 			    </span>
 			</h1>
 			
