final deprecation, migration to CodaLab

--- a/site/app/views/general_display/index.html.erb
+++ b/site/app/views/general_display/index.html.erb
@@ -1,4 +1,14 @@
 <div id="home_info">
+  <p>
+  [<b>Notice</b>: On March 1, 2018, after 8 years of promoting openness and standardization in
+  machine learning evaluation and executing people's arbitrary code, we are
+  finally retiring MLcomp.  However, all the public code and data will be
+  migrated to <a href="https://worksheets.codalab.org/">CodaLab Worksheets</a>,
+  a much more flexible and powerful successor to MLcomp.  If you have private
+  code/data, you can migrate it yourself or make it public.  Thanks to everyone
+  who participated!  The spirit of MLcomp will still live on in CodaLab.]
+  </p>
+
   MLcomp is a free website for <b>objectively comparing</b> machine learning
   programs across various datasets for multiple problem <a
     href="/faq/domains">domains</a>.
